--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -10,14 +10,30 @@
         <div class="content">
             <div class="page-bound">
                 <form action="{{ url_for('login') }}" method="POST">
-                    <label class="form-label">
-                        <span class="form-label__text">Name</span>
-                        <input type="text" name="user" tabindex="1" />
-                    </label>
-                    <label class="form-label">
-                        <span class="form-label__text">Password</span>
-                        <input type="password" name="password" tabindex="1" />
-                    </label>
+                    {{ form.hidden_tag() }}
+
+                    {% with messages = get_flashed_messages() %}
+                        {% if messages %}
+                            {% for message in messages %}
+                                <p class="warning">{{ message }}</p>
+                            {% endfor %}
+                        {% endif %}
+                    {% endwith %}
+
+                    <div class="grid">
+                        <div class="grid__unit grid__unit--1-2-m">
+                            <label class="form-label">
+                                <span class="form-label__text">Name</span>
+                                {{ form.username(tabindex=1) }}
+                            </label>
+                        </div>
+                        <div class="grid__unit grid__unit--1-2-m">
+                            <label class="form-label">
+                                <span class="form-label__text">Password</span>
+                                {{ form.password(tabindex=1) }}
+                            </label>
+                        </div>
+                    </div>
 
                     <button class="button admin-write__bottom-save" type="submit" tabindex="1">Go</button>
                 </form>
